adding challenge files

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,23 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+
+# Ignore folders
+17-10-3-combination_sampling/
+17-10-2-undersampling/
+17-10-1-oversampling/
+17-9-3-gradient_boosted_tree/
+Random_Forest_Classifier/
+17-7-2-decision_tree/
+17-6-4-scale/
+17-6-1-label_encode/
+17-5-2-svm/
+17-4-2-precision__recall_f1/
+17-3-1-logistic_regression_demo/
+17-3-2-logistic_regression_dm/
+linear_regression_salary/
+
+
 # C extensions
 *.so
 
